0033049: Command 'tclean -geom' does not remove all geometric objects from the shape

Remove unused P-curves when cleaning the geometry